--- a/ampFinal.ejs
+++ b/ampFinal.ejs
@@ -5,7 +5,7 @@
       
         
 
-          <amp-story-page id=f229facb-9c2e-4cd7-9587-4d7aaf8ab79d >
+          <amp-story-page id=ff3a931c-cd61-4659-be6b-912bc05cc8aa >
             
                 
 
@@ -17,7 +17,7 @@
                           
                           
                             <amp-story-grid-layer template="vertical" class="ptag">
-                               <amp-img layout="fixed" src=http://localhost:4005/img2.jpeg height="50px" width="50px" id=f6a8c456-7a12-4366-97e4-8798dbd013c7></amp-img>
+                               <amp-img layout="fixed" src=http://localhost:4005/hand.png  id=f0e7c20f-b3f6-4cc6-a1f0-94dfdfed1c07></amp-img>
                             </amp-story-grid-layer>
                           
                           
@@ -31,16 +31,19 @@
                         
 
                           
+
+                          
+
+
+                          
                           
                             <amp-story-grid-layer template="vertical" class="ptag">
-                               <amp-img layout="fixed" src=http://localhost:4005/img1.jpeg height="50px" width="50px" id=f64ae5a5-1ac0-4016-adb7-e15b49d789e9></amp-img>
+                              <amp-fit-text id=f01f3657-5f03-4f8a-9475-4d92acf16595  layout="responsive" max-font-size="24">
+                                jkhkjh
+                              </amp-fit-text>
+                               
                             </amp-story-grid-layer>
                           
-                          
-
-                          
-
-
                           
 
                       
