--- a/views/indexAmp.ejs
+++ b/views/indexAmp.ejs
@@ -32,9 +32,10 @@
 
                 <% if(key.tag=='img'){ %>
                   #<%=key.id%>{
-                    height:100%;
-                    width: 100%;
+                    height:100% !important;
+                    width: 100% !important;
                     position: absolute;
+                    object-fit: contain;
                   }
 
                 <%}%>
