date picker docker

--- a/ampFinal.ejs
+++ b/ampFinal.ejs
@@ -5,7 +5,7 @@
       
         
 
-          <amp-story-page id=ff3a931c-cd61-4659-be6b-912bc05cc8aa >
+          <amp-story-page id=f9a6f6ea-a55b-4981-a993-103a50098df1 >
             
                 
 
@@ -17,7 +17,7 @@
                           
                           
                             <amp-story-grid-layer template="vertical" class="ptag">
-                               <amp-img layout="fixed" src=http://localhost:4005/hand.png  id=f0e7c20f-b3f6-4cc6-a1f0-94dfdfed1c07></amp-img>
+                               <amp-img layout="fixed" src=http://localhost:4005/gift.jpg  id=f7620c51-b3e6-41a0-a7a0-f7a0f6c6b0bc></amp-img>
                             </amp-story-grid-layer>
                           
                           
@@ -38,8 +38,8 @@
                           
                           
                             <amp-story-grid-layer template="vertical" class="ptag">
-                              <amp-fit-text id=f01f3657-5f03-4f8a-9475-4d92acf16595  layout="responsive" max-font-size="24">
-                                jkhkjh
+                              <amp-fit-text id=f6e736ea-237b-4bbb-96c1-07034437c4d5  layout="responsive" max-font-size="24">
+                                Happy Birthday
                               </amp-fit-text>
                                
                             </amp-story-grid-layer>
